k8s/dev/ui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: pipelines-vote-ui
  name: pipelines-vote-ui
  namespace: app-vote-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pipelines-vote-ui
  template:
    metadata:
      labels:
        app: pipelines-vote-ui
    spec:
      containers:
        - image: image-registry.openshift-image-registry.svc:5000/pipelines-tutorial/pipelines-vote-ui:b6ceb69e1184dbd12d441096d2dd6eaa505cf9c7
          imagePullPolicy: Always
          name: pipelines-vote-ui
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 9090
              protocol: TCP
